--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,32 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
+  position: relative;
+}
+
+.Welcome-title {
+  display: flex;
+
+  position: absolute;
+  background: transparent;
+
+  width: 100%;
+  height: 100%;
+
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+
+  color: white;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  z-index: 5;
 }
 
 .App-link {
